[package]
name = "layout-lib"
version = "0.1.0"
edition = "2021"
authors = ["hangj <guijie.han@gmail.com>"]
readme = "README.md"
license = "MIT"
description = "view the data layout of a struct"
repository = "https://github.com/hangj/layout-rs"
exclude = ["/.github/*", "/.gitattributes", "/appveyor.yml", "/Changelog.md", "/clippy.toml", "/codecov.yml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
layout-macro = { path = "layout-macro", version = "*" }

[workspace]
members = [
    "example",
    "layout-macro",
]
